add YY.MM.DD tick format

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 xaxis: {
                     title: 'Date',
                     type: 'date',  // Change x-axis type to 'date'
-                    tickformat: '%m.%d'  // Format the date display to MM.DD
+                    tickformat: '%Y.%m.%d'  // Format the date display to YY.MM.DD
                 },
                 yaxis: { title: 'Weight(kg)' }
             };
